# diskcache_rs

./: .gitignore  Cargo.toml  README.md
examples/: hello_diskcache.rs
src/: client.rs  fs.rs  lib.rs  main.rs  store.rs
